# aoc

./: .gitignore  day1.py  day11.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day1_cleanup.py  day2.py  day20.py  day21.py  day22.py  day23.py  day24.py  day3.py  day4.py  day6.py  day7.py  day8.py  requirements.txt  template.py
2018/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day23.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  pyproject.toml  template.py
2018/lib/: input.py  ocr.py  point.py
2020/: day10.py  day12.py  day13.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day25.py  day3.py  day5.py  day6.py  day9.py  requirements.txt
2021/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  pyproject.toml
2021/lib/: aoc_api.py  draw.py  grid_2d.py  input.py  numdict.py  ocr.py  point.py
aoc_ru_2020/: Cargo.toml  kry  story
aoc_ru_2020/aoclib/: Cargo.toml
aoc_ru_2020/day1/: Cargo.toml
aoc_ru_2020/day2/: Cargo.toml
lib/: aoc_api.py  draw.py  input.py  point.py
other/: gopher2.py  maxflow.in  maxflow.py
rerun_2020/: day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
(+5 files in other folders)
