[tool.poetry]
name = "aoc2021"
version = "0.1.0"
description = ""
authors = ["Elias Freider <elias@freider.se>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
numpy = "^1.21.4"
networkx = "^2.6.3"
pyparsing = "^3.0.6"
pytest = "^6.2.5"
requests = "^2.26.0"
scipy = "^1.7.3"
sympy = "^1.9"

[tool.poetry.dev-dependencies]
pylint = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
